fixed Did You Know? arrows and text spacing

--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -109,7 +109,14 @@
   margin-top: -20px;
 }
 
+/*Did You Know? tile*/
+.dyk-nav-left img{
+  transform: translateY(85%);
+}
 
+.dyk-nav-right img{
+  transform: translate(1538%, -175%);
+}
 
 
 
